Added more content to the page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Best Git page</h1>
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, blanditiis ex! Excepturi earum illum deserunt blanditiis placeat repellendus nam non dolorem temporibus quas iste sint, debitis accusantium dicta. Delectus, amet!</P>
 </body>
 </html>
