Even more content

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Best Git page</h1>
     <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, blanditiis ex! Excepturi earum illum deserunt blanditiis placeat repellendus nam non dolorem temporibus quas iste sint, debitis accusantium dicta. Delectus, amet!</P>
+    <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, eius corrupti? Magni quisquam eum omnis ea corrupti molestias incidunt sed temporibus non vitae, voluptatum, quas suscipit voluptatibus! Quasi, numquam ullam.
+    Nemo, eius esse quam tenetur recusandae odit voluptatibus nam fugit voluptatum corrupti mollitia quibusdam, atque dolorem cumque asperiores nihil officia animi ratione magni. Assumenda, voluptas quisquam? Nulla et dolorum libero.</h2>
 </body>
+
 </html>
