--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Best Git page</h1>
+    <h2>Version 1.0</h2>
     <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, blanditiis ex! Excepturi earum illum deserunt blanditiis placeat repellendus nam non dolorem temporibus quas iste sint, debitis accusantium dicta. Delectus, amet!</P>
     <p>This is anither paragraph</p>
     <h2>Lorem ipsum dolor sit amet</h2>
